<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="E-mail"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordLogin"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="Password"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogin"
        app:layout_constraintBottom_toTopOf="@id/loginButton"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="Sign In"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLogin"
        app:layout_constraintBottom_toTopOf="@id/signinRedirect"/>

    <TextView
        android:id="@+id/signinRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No account yet"
        android:clickable="true"
        android:textSize="40dp"
        android:background="?android:attr/selectableItemBackground"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>